Updated Catnip\Loca and Catnip\View for loca-update

--- a/localization/en.json
+++ b/localization/en.json
@@ -27,6 +27,10 @@
         {
             "key": "license",
             "value": "License"
+        },
+        {
+            "key": "replace",
+            "value": "This is a {REPLACE_ME} test!"
         }
     ]
 }
