Updated demo-views and added demo-routes

--- a/localization/en.json
+++ b/localization/en.json
@@ -35,6 +35,15 @@
         {
             "key": "home",
             "value": "Home"
+        },
+        {
+            "key": "features",
+            "value": "Features"
+        },
+        {
+            "key": "plugins",
+            "value": "Plugins"
         }
+        
     ]
 }
